--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,20 +1,45 @@
 button {
-    display: inline-block;
-    margin: 5px;
-    cursor: pointer;
-    font-size: 100%;
-    background-color: #DC3545;
-    border-radius: 5px;
-    padding: 2px 10px;
-    color: white;
-    border: 0;
-    transition: background-color 0.1s;
-  }
-  
-  button:hover {
-    background-color: #F76F73;
-  }
-  
-  .hide {
-    display: none;
-  }
+  display: inline-block;
+  margin: 5px;
+  cursor: pointer;
+  font-size: 100%;
+  background-color: #DC3545;
+  border-radius: 5px;
+  padding: 2px 10px;
+  color: white;
+  border: 0;
+  transition: background-color 0.1s;
+}
+button:hover {
+  background-color: #F76F73;
+}
+.hide {
+  display: none;
+}
+#home{
+background-color: #DC3545;
+}
+#home{
+font-size: 30px;
+font-weight: bold;
+}
+#quiz{
+  background-color: darkslateblue;
+}
+#search-input
+{
+font-weight: bold;
+color:red;
+}
+#fname{
+font-weight: bold;
+color:purple;
+}
+#start{
+font-size: 20px;
+font-weight: bold;
+color: blue;
+}
+body{
+  background-color: darkslateblue;
+}
